# audio-llm-api

./: README.md  pyproject.toml
app/: main.py
app/core/: auth.py  settings.py
app/schemas/: asr.py  audio.py  llm.py
app/services/: asr.py  llm.py  utils.py
